   controller
 * add a GUI to manage podcasts
 * add a GUI for the QTSound access module to process audio captured locally
   - This also allows to capture input from a webcam and a mic at the same time.
 * add a GUI to capture QTSound data along with the current screen content
 * add an option to let the Apple Remote control the system volume instead of
   VLC's internal volume level
 * add an option to disable skipping to next/previous file with the Apple Remote
 * add an option to show next / previous buttons
 * add an option to hide the shuffle and repeat buttons
 * add optional playlist columns for track number, genre, album, description,
   date and language.
 * add options to the Advanced Open File dialog for start and stop time
 * add an option to play videos as a desktop background
 * add a new panel for media conversation and streaming
 * allow the OS to turn off the screen(s) when playing audio-only media while the user
   is idle.
 * The Streaming/Transcoding wizard and the open dialog's output panel are
   deprecated now

Qt:
 * Partial support for Qt5.0
 * Menus modifications and improvements
 * Playlist improvements and fixes, including PictureFlow view
 * Streaming output wizard rewrite
 * Numerous fixes

libVLC:
 * new libvlc_audio_output_device_list_get and libvlc_audio_output_device_list_release functions
   to replace the deprecated libvlc_audio_output_device_count, libvlc_audio_output_device_longname
   and libvlc_audio_output_device_id
 * new libvlc_log_subscribe and libvlc_log_unsubscribe function to register logging callbacks

Removed modules:
 * portaudio audio output: use the native audio output instead
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)
 * PVR: IVTV analog TV encoder - use V4L instead
 * RTMP access: use libavformat avio instead
 * RTMP access_output: use libavformat avio instead
 * Hildon GUI
 * MSN messenger "now playing" (broken and unmaintained since VLC 1.0.0)